force-app/main/default/objects/Apttus_Billing__WalletDrawdown__c/Apttus_Billing__WalletDrawdown__c.object-meta.xml
<CustomObject>
    <description>This object stores the payment transaction history of wallet linked with asset line item and Billing schedules</description>
    <label>Wallet Drawdown</label>
    <nameField>
        <displayFormat>WD-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wallet Drawdowns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>