force-app/main/default/objects/Apttus_Billing__WalletDrawdown__c/fields/Apttus_Billing__Amount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Amount__c</fullName>
    <description>Amount consumed from the wallet. If Amount is negative that Wallet will be credited.</description>
    <inlineHelpText>Amount consumed from the wallet</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>