force-app/main/default/objects/Apttus_Billing__WalletDrawdown__c/fields/Apttus_Billing__AssetLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AssetLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to asset line item.  This links the drawdown to the asset line item that consumes from the wallet.</description>
    <inlineHelpText>This links the drawdown to the asset line item that consumes from the wallet.</inlineHelpText>
    <label>Asset Line Item</label>
    <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
    <relationshipLabel>Wallet Drawdown (Asset Line Item)</relationshipLabel>
    <relationshipName>WalletDrawdownAssetLineItem</relationshipName>
    <type>Lookup</type>
</CustomField>