force-app/main/default/objects/Apttus_Billing__WalletDrawdown__c/fields/Apttus_Billing__Backout__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Backout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the drawdown is backed out due to ABO actions</description>
    <inlineHelpText>Flag to indicate if the drawdown is backed out due to ABO actions</inlineHelpText>
    <label>Backout</label>
    <type>Checkbox</type>
</CustomField>