force-app/main/default/objects/Apttus_Billing__WalletDrawdown__c/fields/Apttus_Billing__BillingScheduleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingScheduleId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to corresponding Billing Schedule. There can be multiple drawdown records for Same billing Schedule Id.</description>
    <inlineHelpText>Lookup to corresponding Billing Schedule.</inlineHelpText>
    <label>Billing Schedule</label>
    <referenceTo>Apttus_Billing__BillingSchedule__c</referenceTo>
    <relationshipLabel>Wallet Drawdown</relationshipLabel>
    <relationshipName>WalletDrawdown</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>