force-app/main/default/objects/Apttus_Billing__WalletDrawdown__c/fields/Apttus_Billing__WalletId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__WalletId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to corresponding wallet Asset Line Item. This links the drawdown to the wallet from where it is being consumed.</description>
    <inlineHelpText>Lookup to corresponding wallet Asset Line Item.</inlineHelpText>
    <label>Wallet</label>
    <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
    <relationshipLabel>Wallet Drawdown (Wallet)</relationshipLabel>
    <relationshipName>WalletDrawdownWallet</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>